@@ -51,6 +51,7 @@ src/tpm2_getpubek
 src/tpm2_takeownership
 src/tpm2_loadexternal
 src/tpm2_getmanufec
+src/tpm2_rc_decode
 test-driver
 test/tpm2-rc-decode_unit
 test/tpm2-rc-entry_unit
